update login reg css

--- a/UI/login.html
+++ b/UI/login.html
@@ -5,6 +5,8 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <link href="css/login.css" rel="stylesheet">
 <!------ Include the above in your HEAD tag ---------->
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 <title>Sakura</title>
     </head>
     <body>
@@ -13,8 +15,14 @@
                 <div class="col-xl-3">
 
                 </div>
-                <div class="col-xl-6 login-form">
-                    <h3>Sakura</h3>
+                <div class="col-xl-6">
+                    <div class="panel-heading">
+                        <div class="panel-title text-center">
+                                <h1 class="title">Sakura</h1>
+                                <hr />
+                            </div>
+                     </div> 
+                  <div class="col-xl-12 login-form">
                     <form>
                         <div class="form-group">
                             <input type="text" class="form-control" placeholder="Your Email *" value="" />
@@ -27,10 +35,12 @@
                         </div>
                         <div class="form-group">
 
-                            <a href="#" class="Register" value="Login">Register</a>
+                            <a href="reg.html" class="Register" value="Login">Register</a>
                         </div>
                     </form>
+                </div>  
                 </div>
+                
             </div>
         </div>
     </body>
