--- a/UI/reg.html
+++ b/UI/reg.html
@@ -6,8 +6,8 @@
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
 		<!-- Website Font style -->
-	    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-		
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 
 <link href="css/reg.css" rel="stylesheet">
 		<title>Registration</title>
@@ -16,14 +16,13 @@
 		<div class="container">
 			<div class="row main">
 				<div class="panel-heading">
-	               <div class="panel-title text-center">
-	               		<h1 class="title">Registration</h1>
-	               		<hr />
-	               	</div>
-	            </div> 
+					<div class="panel-title text-center">
+							<h1 class="title">Registration</h1>
+							<hr />
+						</div>
+				 </div> 
 				<div class="main-login main-center">
 					<form class="form-horizontal" method="post" action="#">
-						
 						<div class="form-group">
 							<label for="email" class="cols-sm-2 control-label">Your Email</label>
 							<div class="cols-sm-10">
@@ -58,7 +57,7 @@
 							<button type="submit" class="btn btn-primary btn-lg btn-block login-button">Register</button>
 						</div>
 						<div class="login-register">
-				            <a href="index.php">Login</a>
+				            <a href="login.html">Login</a>
 				         </div>
 					</form>
 				</div>
