add image upload

--- a/UI/preference.html
+++ b/UI/preference.html
@@ -23,6 +23,10 @@
 				 </div> 
 				<div class="main-login main-center">
 					<form class="form-horizontal" method="post" action="#">
+                        <div class="form-group">
+                            <label for="image">Choose your image: </label>
+                            <input type="file" class="form-control-file" id="image" accept="image/*">
+                          </div>
 						<div class="form-group">
 							<label for="des" class="cols-sm-2 control-label">Tell us about yourself:</label>
 							<div class="cols-sm-10">
