--- a/UI/preference.html
+++ b/UI/preference.html
@@ -32,7 +32,7 @@
 							<div class="cols-sm-10">
 								<div class="input-group">
 									<span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
-									<textarea rows="3" class="form-control" name="des" id="des"  placeholder="E.g. I am Tim. My favourite habit is .....s">
+									<textarea rows="3" class="form-control" name="des" id="des"  placeholder="E.g. I am Tim. My favourite habit is .....">
 
                                     </textarea>
 								</div>
