--- a/UI/matchmaking.html
+++ b/UI/matchmaking.html
@@ -46,11 +46,11 @@
 			<div class="row main">
 				
 <section class="container">
-    <div class="col-md-12">
-       <div class="col-md-8">
+    <div class="col-md-12" style="position:relative;">
+       <div class="col-md-8" style="position:absolute;bottom:0;">
         <h1>Sakura</h1>
        </div>
-       <div class="col-md-4">
+       <div class="col-md-4" style="position:absolute;bottom:0; right: 0;">
         <ul class="nav nav-tabs">
             <li class="nav-item">
               <a class="nav-link active" href="#">Matching</a>
@@ -64,6 +64,7 @@
           </ul> 
        </div>
     </div>
+    <hr>
     <div class="row active-with-click">
         <div class="col-md-4 col-sm-6 col-xs-12">
             <article class="material-card Blue-Grey">
