register process edit db

--- a/UI/reg.html
+++ b/UI/reg.html
@@ -22,7 +22,7 @@
 						</div>
 				 </div> 
 				<div class="main-login main-center">
-					<form class="form-horizontal" method="post" action="#">
+					<form class="form-horizontal" method="post" action="../Controller/register.php">
 						<div class="form-group">
 							<label for="email" class="cols-sm-2 control-label">Your Email</label>
 							<div class="cols-sm-10">
